internal/gatewayapi/testdata/securitypolicy-with-oidc-deny-redirect.in.yaml
secrets:
- apiVersion: v1
  kind: Secret
  metadata:
    namespace: envoy-gateway
    name: client1-secret
  data:
    client-secret: Y2xpZW50MTpzZWNyZXQK
- apiVersion: v1
  kind: Secret
  metadata:
    namespace: envoy-gateway-system
    name: envoy-oidc-hmac
  data:
    hmac-secret: qrOYACHXoe7UEDI/raOjNSx+Z9ufXSc/22C3T6X/zPY=
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/foo"
      backendRefs:
      - name: service-1
        port: 8080
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    namespace: envoy-gateway
    name: policy-for-gateway  # This policy should attach httproute-2
    uid: b8284d0f-de82-4c65-b204-96a0d3f258a1
  spec:
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
    oidc:
      provider:
        issuer: "https://accounts.google.com"
      clientID: "client1.apps.googleusercontent.com"
      clientSecret:
        name: "client1-secret"
      redirectURL: "https://www.example.com/bar/oauth2/callback"
      logoutPath: "/bar/logout"
      denyRedirect:
        headers:
        - name: :path
          type: Prefix
          value: /api
        - name: X-No-Redirect
          type: RegularExpression
          value: ".*"
        - name: X-No-Redirect
          type: Exact
          value: "foobar"
        - name: :path
          type: Suffix
          value: "bar"
        - name: test-5
          value: "bar"
      cookieNames:
        idToken: "CustomIdTokenCookie"
        accessToken: "CustomAccessTokenCookie"
